# carbon-activity

./: LICENSE  README (1).md  README.md  main.py  pyproject.toml  requirements.txt
data/: Ronysiswadi15-51Dv8.ttf:Zone.Identifier  output.py
data/font/: Forum-Regular.ttf:Zone.Identifier
